Fixed about section tablet and desktop mode

--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,7 @@
 
 @layer utilities {
   .green-gradient {
-    background: linear-gradient(rgb(197, 255, 50), transparent 50%)
+    background: linear-gradient(rgb(197, 255, 50), transparent 100%)
       no-repeat;
   }
 }
